[gd_scene load_steps=3 format=2]

[ext_resource path="res://src/UI/Heart.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/UI/HeartProgress.gd" type="Script" id=4]

[node name="HeartProgress" type="HBoxContainer"]
margin_top = 5.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Heart1" parent="." instance=ExtResource( 1 )]
margin_right = 16.0
margin_bottom = 16.0

[node name="Heart2" parent="." instance=ExtResource( 1 )]
margin_left = 20.0
margin_right = 36.0
margin_bottom = 16.0

[node name="Heart3" parent="." instance=ExtResource( 1 )]
margin_left = 40.0
margin_right = 56.0
margin_bottom = 16.0
